--- a/src/main.scss
+++ b/src/main.scss
@@ -4,7 +4,7 @@ $spacers: (
   0: 0,
   1: $spacer * .25,
   2: $spacer * .5,
-  3: $spacer,
+  3: $spacer * .75,
   4: $spacer * 1.5,
   5: $spacer * 3,
 );
@@ -23,7 +23,7 @@ $cyan:    #0dcaf0;
 $white:    #fff;
 $gray-100: #f8f9fa;
 $gray-200: #e9ecef;
-$gray-300: #dee2e6;
+$gray-300: #f7f7f9;
 $gray-400: #ced4da;
 $gray-500: #adb5bd;
 $gray-600: #6c757d;
@@ -34,14 +34,15 @@ $black:    #000;
 
 
 
-$primary:       $blue;
-$secondary:     $black;
+$primary:       $black;
+$secondary:     $gray-300;
 $success:       $green;
 $info:          $cyan;
 $warning:       $yellow;
 $danger:        $red;
 $light:         $gray-300;
 $dark:          $gray-900;
+
 
 .link-btn{
     margin-left: 10px ;
