--- a/src/main.scss
+++ b/src/main.scss
@@ -7,6 +7,7 @@ $spacers: (
   3: $spacer * .75,
   4: $spacer * 1.5,
   5: $spacer * 3,
+  6: $spacer * 4,
 );
 $blue:    #0d6efd;
 $indigo:  #6610f2;
