--- a/src/main.scss
+++ b/src/main.scss
@@ -72,7 +72,7 @@ h4{
     color: black;
     border: 1px solid black;
     padding: 0.5rem 1rem ;
-
+    border-radius: 5px;
 }
 .form-control{
     background-color: $gray-500;
