--- a/src/main.scss
+++ b/src/main.scss
@@ -44,13 +44,19 @@ $danger: $red;
 $light: $gray-300;
 $dark: $gray-900;
 
-
+.cs-btn{
+    border: 1px solid black;
+    background-color: rebeccapurple;
+}
 .custom-bg {
     background: #2980B9;
     background: -webkit-linear-gradient(to right, #FFFFFF, #6DD5FA, #2980B9);
     background: linear-gradient(to right, #FFFFFF, #6DD5FA, #2980B9);
 }
-
+.card{
+    border: 1px solid #2980B9 !important;
+    
+}
 .custom-bg-footer {
     background: #2980B9;
     background: -webkit-linear-gradient(to left, #FFFFFF, #6DD5FA, #2980B9);
@@ -122,7 +128,11 @@ h4 {
     top: 10px;
     right: 10px;
 }
-
+.filter{
+    display: flex;
+    width: 80% !important;
+    margin: 0 auto;
+}
 @media (max-width:600px) {
     .crs {
         height: 350px;
@@ -136,6 +146,25 @@ h4 {
 
     h4 {
         padding: 0 0.5rem
+    }
+    .filter{
+        display: flex;
+        width: 100% !important;
+        font-size: small;
+        flex-direction: column;
+    }
+    .w-50{
+        width: 100% !important
+    }
+    .navbar-nav{
+        display: flex;
+        flex-direction: row !important;
+        justify-content: space-between !important;
+    }
+    .custom-bg {
+        background: #2980B9;
+        background: -webkit-linear-gradient(to left, #6DD5FA, #2980B9);
+        background: linear-gradient(to left, #6DD5FA, #2980B9);
     }
 }
 
