--- a/src/main.scss
+++ b/src/main.scss
@@ -117,7 +117,9 @@ h4 {
     padding: 0.5rem 1rem;
     border-radius: 5px;
 }
-
+main{
+    min-height: 100vh;
+}
 .form-control {
     background-color: $gray-500;
     border-color: black;
