Added badge counter

--- a/src/main.scss
+++ b/src/main.scss
@@ -8,6 +8,7 @@ $spacers: (
     4: $spacer * 1.5,
     5: $spacer * 3,
     6: $spacer * 4,
+    7: $spacer * 6,
 );
 $blue: #0d6efd;
 $indigo: #6610f2;
@@ -43,6 +44,31 @@ $warning: $yellow;
 $danger: $red;
 $light: $gray-300;
 $dark: $gray-900;
+
+
+
+
+
+
+#ex3 .fa-stack[data-count]:after{
+    position:absolute;
+    right:0%;
+    top:-2%;
+    content: attr(data-count);
+    font-size:70%;
+    padding:.6em;
+    border-radius:50%;
+    line-height:.8em;
+    color: white;
+    background:rgba(12, 12, 12, 0.85);
+    text-align:center;
+    min-width: 1em;
+    font-weight:bold;
+  }
+  
+  
+  
+
 
 .cs-btn{
     border: 1px solid black;
@@ -88,7 +114,7 @@ $dark: $gray-900;
     display: block;
     height: 450px;
     width: 100%;
-    margin: 0 auto;
+    margin: 1rem auto;
     background: #16222A;
     background: -webkit-linear-gradient(to bottom, #3A6073, #16222A);
     background: linear-gradient(to bottom, #3A6073, #16222A);
